Remove dependency on Maven